--- a/scss/blocks/_about.scss
+++ b/scss/blocks/_about.scss
@@ -54,6 +54,9 @@
     @include desktop-small {
       text-align: center;
     }
+    @include mobile {
+      font-size: 46px;
+    }
     span {
       color: $main-color;
     }
