--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -44,11 +44,80 @@ p {
   border-radius: 24px;
   @include text($font-primary, 700, 18px, 27px, $logo-color);
   cursor: pointer;
+
   &__links {
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 10px;
+  }
+}
+
+.button {
+  background: $main-color;
+  border: none;
+  border-radius: 1000px;
+  box-shadow: 10px 10px 24px rgba(79, 209, 197, 0.64);
+  transition: all 0.3s ease-in-out 0s;
+  position: relative;
+
+  .button::before {
+    content: "";
+    border-radius: 1000px;
+    min-width: calc(137.24px + 12px);
+    min-height: calc(47px + 12px);
+    border: 3px solid $main-color;
+    box-shadow: 0 0 20px rgba(0, 255, 203, 0.64);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    opacity: 0;
+    transition: all 0.3s ease-in-out 0s;
+  }
+}
+
+.button:hover,
+.button:focus {
+  color: #313133;
+  transform: translateY(-6px);
+}
+.button:hover::before,
+.button:focus::before {
+  opacity: 1;
+}
+
+.button::after {
+  content: "";
+  width: 30px;
+  height: 30px;
+  border-radius: 100%;
+  border: 4px solid $main-color;
+  position: absolute;
+  z-index: -1;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  animation: ring 1.5s;
+  animation-iteration-count: 1;
+}
+
+.button:hover::after,
+.button:focus::after {
+  animation: none;
+  display: none;
+}
+
+@keyframes ring {
+  0% {
+    width: 30px;
+    height: 30px;
+    opacity: 1;
+  }
+  100% {
+    width: 300px;
+    height: 300px;
+    opacity: 0;
   }
 }
 .btn-primary {
@@ -58,6 +127,7 @@ p {
 .btn-secondary {
   background: $dark;
 }
+
 .wrapper {
   overflow: hidden;
 }
