--- a/scss/blocks/_works.scss
+++ b/scss/blocks/_works.scss
@@ -25,12 +25,16 @@
       max-width: 100%;
     }
   }
+
   &__item-wrapper {
+    position: relative;
     width: 100%;
     height: 100%;
-    position: relative;
     &:hover .overlay {
       opacity: 1;
+    }
+    &:hover .works__item {
+      filter: blur(4px) brightness(50%);
     }
   }
   &__item {
@@ -40,13 +44,11 @@
     background: $dark;
     transition: $transition;
     cursor: pointer;
+
     @include desktop-small {
       max-width: 100%;
     }
 
-    filter: blur(3px);
-    &:hover {
-    }
     img {
       width: 265px;
       height: 168px;
@@ -70,6 +72,7 @@
   z-index: 5;
   display: flex;
   flex-direction: column;
+
   &__title {
     @include text($font-primary, 700, 16px, 24px, $logo-color);
     margin-bottom: 10px;
