--- a/style.css
+++ b/style.css
@@ -414,6 +414,96 @@ p {
   gap: 10px;
 }
 
+.button {
+  background: #00adb5;
+  border: none;
+  border-radius: 1000px;
+  -webkit-box-shadow: 10px 10px 24px rgba(79, 209, 197, 0.64);
+          box-shadow: 10px 10px 24px rgba(79, 209, 197, 0.64);
+  -webkit-transition: all 0.3s ease-in-out 0s;
+  transition: all 0.3s ease-in-out 0s;
+  position: relative;
+}
+.button .button::before {
+  content: "";
+  border-radius: 1000px;
+  min-width: calc(137.24px + 12px);
+  min-height: calc(47px + 12px);
+  border: 3px solid #00adb5;
+  -webkit-box-shadow: 0 0 20px rgba(0, 255, 203, 0.64);
+          box-shadow: 0 0 20px rgba(0, 255, 203, 0.64);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  opacity: 0;
+  -webkit-transition: all 0.3s ease-in-out 0s;
+  transition: all 0.3s ease-in-out 0s;
+}
+
+.button:hover,
+.button:focus {
+  color: #313133;
+  -webkit-transform: translateY(-6px);
+          transform: translateY(-6px);
+}
+
+.button:hover::before,
+.button:focus::before {
+  opacity: 1;
+}
+
+.button::after {
+  content: "";
+  width: 30px;
+  height: 30px;
+  border-radius: 100%;
+  border: 4px solid #00adb5;
+  position: absolute;
+  z-index: -1;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  -webkit-animation: ring 1.5s;
+          animation: ring 1.5s;
+  -webkit-animation-iteration-count: 1;
+          animation-iteration-count: 1;
+}
+
+.button:hover::after,
+.button:focus::after {
+  -webkit-animation: none;
+          animation: none;
+  display: none;
+}
+
+@-webkit-keyframes ring {
+  0% {
+    width: 30px;
+    height: 30px;
+    opacity: 1;
+  }
+  100% {
+    width: 300px;
+    height: 300px;
+    opacity: 0;
+  }
+}
+
+@keyframes ring {
+  0% {
+    width: 30px;
+    height: 30px;
+    opacity: 1;
+  }
+  100% {
+    width: 300px;
+    height: 300px;
+    opacity: 0;
+  }
+}
 .btn-primary {
   background: #00adb5;
 }
@@ -636,6 +726,11 @@ p {
     font-size: 56px;
   }
 }
+@media (max-width: 576px) {
+  .main-screen__title {
+    font-size: 46px;
+  }
+}
 .main-screen__title span {
   color: #00adb5;
 }
@@ -762,6 +857,11 @@ p {
     text-align: center;
   }
 }
+@media (max-width: 576px) {
+  .about__info-title {
+    font-size: 46px;
+  }
+}
 .about__info-title span {
   color: #00adb5;
 }
@@ -836,12 +936,16 @@ p {
   }
 }
 .works__item-wrapper {
+  position: relative;
   width: 100%;
   height: 100%;
-  position: relative;
 }
 .works__item-wrapper:hover .overlay {
   opacity: 1;
+}
+.works__item-wrapper:hover .works__item {
+  -webkit-filter: blur(4px) brightness(50%);
+          filter: blur(4px) brightness(50%);
 }
 .works__item {
   max-width: 368px;
@@ -851,8 +955,6 @@ p {
   -webkit-transition: 0.3s all ease-in-out;
   transition: 0.3s all ease-in-out;
   cursor: pointer;
-  -webkit-filter: blur(3px);
-          filter: blur(3px);
 }
 @media (max-width: 1200px) {
   .works__item {
