--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -3,10 +3,13 @@
 *::after {
   box-sizing: border-box;
 }
+html {
+  scroll-behavior: smooth;
+}
 body {
+  position: relative;
   font-family: $font-primary;
   margin: 0;
-
   background: $bg-color;
 }
 .container {
@@ -35,6 +38,13 @@ h2,
 p {
   margin: 0;
   padding: 0;
+}
+.vl {
+  border-right: 1px solid $border;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 525px;
 }
 .btn {
   padding: 10px 32px;
@@ -126,6 +136,10 @@ p {
 
 .btn-secondary {
   background: $dark;
+  transition: $transition;
+  &:hover {
+    outline: 2px solid $main-color;
+  }
 }
 
 .wrapper {
