--- a/scss/blocks/_about.scss
+++ b/scss/blocks/_about.scss
@@ -51,6 +51,20 @@
   &__info-title {
     @include text($font-primary, 700, 64px, 96px, $color-white);
     margin-top: 30px;
+    &:hover {
+      animation: text-focus-in 1s cubic-bezier(0.55, 0.085, 0.68, 0.53) 0.2s
+        both;
+      @keyframes text-focus-in {
+        0% {
+          filter: blur(12px);
+          opacity: 0;
+        }
+        100% {
+          filter: blur(0px);
+          opacity: 1;
+        }
+      }
+    }
     @include desktop-small {
       text-align: center;
     }
