--- a/scss/blocks/_main-screen.scss
+++ b/scss/blocks/_main-screen.scss
@@ -48,6 +48,21 @@
   &__title {
     @include text($font-primary, 700, 96px, 96px, $color-white);
     margin-bottom: 48px;
+    transition: $transition;
+    &:hover {
+      animation: text-focus-in 1s cubic-bezier(0.55, 0.085, 0.68, 0.53) 0.2s
+        both;
+      @keyframes text-focus-in {
+        0% {
+          filter: blur(12px);
+          opacity: 0;
+        }
+        100% {
+          filter: blur(0px);
+          opacity: 1;
+        }
+      }
+    }
     @include desktop-small {
       font-size: 56px;
     }
@@ -56,6 +71,9 @@
     }
     span {
       color: $main-color;
+      transition: $transition;
+      &:hover {
+      }
     }
   }
   &__next {
