--- a/scss/blocks/_works.scss
+++ b/scss/blocks/_works.scss
@@ -1,10 +1,25 @@
 .works {
   padding-bottom: 151px;
   background: url("./img/icons/items-bg.svg");
+
   &__title {
     @include text($font-primary, 700, 64px, 96px, $color-white);
     padding-top: 179px;
     margin-bottom: 48px;
+    &:hover {
+      animation: text-focus-in 1s cubic-bezier(0.55, 0.085, 0.68, 0.53) 0.2s
+        both;
+      @keyframes text-focus-in {
+        0% {
+          filter: blur(12px);
+          opacity: 0;
+        }
+        100% {
+          filter: blur(0px);
+          opacity: 1;
+        }
+      }
+    }
     @include desktop-small {
       font-size: 44px;
       text-align: center;
