--- a/style.css
+++ b/style.css
@@ -771,6 +771,36 @@ p {
   line-height: 96px;
   color: #fff;
   margin-bottom: 48px;
+  -webkit-transition: 0.3s all ease-in-out;
+  transition: 0.3s all ease-in-out;
+}
+.main-screen__title:hover {
+  -webkit-animation: text-focus-in 1s cubic-bezier(0.55, 0.085, 0.68, 0.53) 0.2s both;
+          animation: text-focus-in 1s cubic-bezier(0.55, 0.085, 0.68, 0.53) 0.2s both;
+}
+@-webkit-keyframes text-focus-in {
+  0% {
+    -webkit-filter: blur(12px);
+            filter: blur(12px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-filter: blur(0px);
+            filter: blur(0px);
+    opacity: 1;
+  }
+}
+@keyframes text-focus-in {
+  0% {
+    -webkit-filter: blur(12px);
+            filter: blur(12px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-filter: blur(0px);
+            filter: blur(0px);
+    opacity: 1;
+  }
 }
 @media (max-width: 1200px) {
   .main-screen__title {
@@ -784,6 +814,8 @@ p {
 }
 .main-screen__title span {
   color: #00adb5;
+  -webkit-transition: 0.3s all ease-in-out;
+  transition: 0.3s all ease-in-out;
 }
 .main-screen__next {
   display: inline-block;
@@ -945,6 +977,22 @@ p {
   color: #fff;
   margin-top: 30px;
 }
+.about__info-title:hover {
+  -webkit-animation: text-focus-in 1s cubic-bezier(0.55, 0.085, 0.68, 0.53) 0.2s both;
+          animation: text-focus-in 1s cubic-bezier(0.55, 0.085, 0.68, 0.53) 0.2s both;
+}
+@keyframes text-focus-in {
+  0% {
+    -webkit-filter: blur(12px);
+            filter: blur(12px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-filter: blur(0px);
+            filter: blur(0px);
+    opacity: 1;
+  }
+}
 @media (max-width: 1200px) {
   .about__info-title {
     text-align: center;
@@ -1017,6 +1065,22 @@ p {
   color: #fff;
   padding-top: 179px;
   margin-bottom: 48px;
+}
+.works__title:hover {
+  -webkit-animation: text-focus-in 1s cubic-bezier(0.55, 0.085, 0.68, 0.53) 0.2s both;
+          animation: text-focus-in 1s cubic-bezier(0.55, 0.085, 0.68, 0.53) 0.2s both;
+}
+@keyframes text-focus-in {
+  0% {
+    -webkit-filter: blur(12px);
+            filter: blur(12px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-filter: blur(0px);
+            filter: blur(0px);
+    opacity: 1;
+  }
 }
 @media (max-width: 1200px) {
   .works__title {
@@ -1162,6 +1226,22 @@ p {
   color: #fff;
   margin-bottom: 55px;
 }
+.contacts__title:hover {
+  -webkit-animation: text-focus-in 1s cubic-bezier(0.55, 0.085, 0.68, 0.53) 0.2s both;
+          animation: text-focus-in 1s cubic-bezier(0.55, 0.085, 0.68, 0.53) 0.2s both;
+}
+@keyframes text-focus-in {
+  0% {
+    -webkit-filter: blur(12px);
+            filter: blur(12px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-filter: blur(0px);
+            filter: blur(0px);
+    opacity: 1;
+  }
+}
 @media (max-width: 1200px) {
   .contacts__title {
     text-align: center;
@@ -1215,6 +1295,22 @@ p {
   right: -670px;
   top: 172px;
   width: 100%;
+}
+.contacts__img:hover {
+  -webkit-animation: text-focus-in 1s cubic-bezier(0.55, 0.085, 0.68, 0.53) 0.2s both;
+          animation: text-focus-in 1s cubic-bezier(0.55, 0.085, 0.68, 0.53) 0.2s both;
+}
+@keyframes text-focus-in {
+  0% {
+    -webkit-filter: blur(12px);
+            filter: blur(12px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-filter: blur(0px);
+            filter: blur(0px);
+    opacity: 1;
+  }
 }
 @media (max-width: 1200px) {
   .contacts__img {
