--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -51,10 +51,16 @@
   &__burger {
     display: none;
     @include desktop-small {
-      display: block;
+      display: flex;
       position: fixed;
       top: 50px;
       right: 20px;
+      width: 40px;
+      height: 40px;
+      background: #00adb58a;
+      border-radius: 50%;
+      justify-content: center;
+      align-items: center;
       color: $color-white;
       font-size: 30px;
       z-index: 9;
