--- a/scss/blocks/_works.scss
+++ b/scss/blocks/_works.scss
@@ -59,9 +59,9 @@
     background: $dark;
     transition: $transition;
     cursor: pointer;
-
     @include desktop-small {
       max-width: 100%;
+      padding: 10px;
     }
 
     img {
@@ -70,6 +70,7 @@
       @include desktop-small {
         height: 100%;
         width: 100%;
+        border-radius: 10px;
       }
     }
   }
@@ -87,6 +88,7 @@
   z-index: 5;
   display: flex;
   flex-direction: column;
+  overflow: scroll;
 
   &__title {
     @include text($font-primary, 700, 16px, 24px, $logo-color);
@@ -101,7 +103,7 @@
     margin-bottom: 26px;
     flex-grow: 1;
     @include desktop-small {
-      font-size: 24px;
+      font-size: 20px;
       color: #00adb5;
       font-weight: 500;
     }
