--- a/style.css
+++ b/style.css
@@ -600,10 +600,22 @@ p {
 }
 @media (max-width: 1200px) {
   .header__burger {
-    display: block;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
     position: fixed;
     top: 50px;
     right: 20px;
+    width: 40px;
+    height: 40px;
+    background: #00adb58a;
+    border-radius: 50%;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     color: #fff;
     font-size: 30px;
     z-index: 9;
@@ -733,6 +745,11 @@ p {
         -ms-flex-direction: column;
             flex-direction: column;
     width: 100%;
+  }
+}
+@media (max-width: 576px) {
+  .main-screen-wrapper {
+    padding-top: 0;
   }
 }
 .main-screen__info {
@@ -867,43 +884,6 @@ p {
   width: 100%;
 }
 
-/*Form example---
-.data {
-  display: none;
-  position: absolute;
-  padding: 30px;
-  background: $bg-color;
-  max-width: 500px;
-  outline: 1px solid $border;
-  border-radius: 10px;
-  label {
-    @include text($font-primary, 700, 16px, 22px, $logo-color);
-  }
-  input,
-  textarea {
-    background: $dark;
-    padding: 15px 7px;
-    border-radius: 18px;
-    width: 100%;
-    border: 0;
-    outline: none;
-    @include text($font-primary, 400, 16px, 22px, $color-white);
-  }
-
-  &__name,
-  &__email,
-  &__text {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 50px;
-  }
-
-  textarea {
-    resize: vertical;
-    height: 200px;
-  }
-}
-*/
 .about-wrapper {
   margin-top: 300px;
   display: -webkit-box;
@@ -924,10 +904,21 @@ p {
     margin-top: 100px;
   }
 }
+@media (max-width: 576px) {
+  .about-wrapper {
+    margin-top: 0;
+    margin-bottom: 30px;
+  }
+}
 
 .about {
   border-bottom: 1px solid rgba(238, 238, 238, 0.1);
   margin-bottom: 132px;
+}
+@media (max-width: 576px) {
+  .about {
+    margin-bottom: 30px;
+  }
 }
 .about__info {
   max-width: 395px;
@@ -1022,7 +1013,7 @@ p {
 }
 @media (max-width: 1200px) {
   .about__info-desc {
-    font-size: 24px;
+    font-size: 20px;
   }
 }
 .about__img {
@@ -1128,6 +1119,7 @@ p {
 @media (max-width: 1200px) {
   .works__item {
     max-width: 100%;
+    padding: 10px;
   }
 }
 .works__item img {
@@ -1138,6 +1130,7 @@ p {
   .works__item img {
     height: 100%;
     width: 100%;
+    border-radius: 10px;
   }
 }
 
@@ -1160,6 +1153,7 @@ p {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  overflow: scroll;
 }
 .overlay__title {
   font-family: "Poppins", sans-serif;
@@ -1187,7 +1181,7 @@ p {
 }
 @media (max-width: 1200px) {
   .overlay__desc {
-    font-size: 24px;
+    font-size: 20px;
     color: #00adb5;
     font-weight: 500;
   }
@@ -1251,6 +1245,8 @@ p {
 @media (max-width: 576px) {
   .contacts__title {
     font-size: 44px;
+    margin-bottom: 15px;
+    padding-top: 40px;
   }
 }
 .contacts__title span {
@@ -1264,6 +1260,11 @@ p {
   .contacts__info {
     margin: auto;
     margin-bottom: 25px;
+  }
+}
+@media (max-width: 576px) {
+  .contacts__info {
+    text-align: center;
   }
 }
 .contacts__item {
@@ -1331,6 +1332,11 @@ p {
       -ms-flex-align: center;
           align-items: center;
 }
+@media (max-width: 576px) {
+  .footer {
+    text-align: center;
+  }
+}
 
 .footer-nav__ul {
   display: -webkit-box;
@@ -1348,6 +1354,7 @@ p {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+    gap: 25px;
   }
 }
 .footer-nav__a {
