--- a/scss/blocks/_works.scss
+++ b/scss/blocks/_works.scss
@@ -88,7 +88,9 @@
   z-index: 5;
   display: flex;
   flex-direction: column;
-  overflow: scroll;
+  @include mobile {
+    overflow-y: scroll;
+  }
 
   &__title {
     @include text($font-primary, 700, 16px, 24px, $logo-color);
