--- a/scss/blocks/_about.scss
+++ b/scss/blocks/_about.scss
@@ -49,6 +49,16 @@
       width: 73px;
       height: 95px;
       color: $details;
+      animation: text-blur-out 5s cubic-bezier(0.55, 0.085, 0.68, 0.53) 0.3s
+        infinite both;
+      @keyframes text-blur-out {
+        0% {
+          filter: blur(0.01);
+        }
+        100% {
+          filter: blur(12px) opacity(0%);
+        }
+      }
       @include mobile {
         display: none;
       }
