--- a/scss/blocks/_works.scss
+++ b/scss/blocks/_works.scss
@@ -35,6 +35,11 @@
     grid-template-columns: 1fr 1fr 1fr;
     gap: 48px;
     @include desktop-small {
+      grid-template-columns: 1fr 1fr;
+      width: 100%;
+      max-width: 100%;
+    }
+    @include mobile {
       grid-template-columns: 1fr;
       width: 100%;
       max-width: 100%;
@@ -68,8 +73,8 @@
       width: 265px;
       height: 168px;
       @include desktop-small {
-        height: 100%;
         width: 100%;
+
         border-radius: 10px;
       }
     }
@@ -88,7 +93,7 @@
   z-index: 5;
   display: flex;
   flex-direction: column;
-  @include mobile {
+  @include tablet {
     overflow-y: scroll;
   }
 
