--- a/style.css
+++ b/style.css
@@ -356,7 +356,12 @@ body {
   position: relative;
   font-family: "Poppins", sans-serif;
   margin: 0;
-  background: #222831;
+  background-image: url("./img/bg1.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+body._overflow {
+  overflow: hidden;
 }
 
 .container {
@@ -775,6 +780,28 @@ p {
   height: 222px;
   top: 100px;
   left: 10px;
+  -webkit-animation: text-blur-out 5s cubic-bezier(0.55, 0.085, 0.68, 0.53) 0.3s infinite both;
+          animation: text-blur-out 5s cubic-bezier(0.55, 0.085, 0.68, 0.53) 0.3s infinite both;
+}
+@-webkit-keyframes text-blur-out {
+  0% {
+    -webkit-filter: blur(0.01);
+            filter: blur(0.01);
+  }
+  100% {
+    -webkit-filter: blur(12px) opacity(0%);
+            filter: blur(12px) opacity(0%);
+  }
+}
+@keyframes text-blur-out {
+  0% {
+    -webkit-filter: blur(0.01);
+            filter: blur(0.01);
+  }
+  100% {
+    -webkit-filter: blur(12px) opacity(0%);
+            filter: blur(12px) opacity(0%);
+  }
 }
 @media (max-width: 1200px) {
   .main-screen__info::before {
@@ -954,6 +981,18 @@ p {
   width: 73px;
   height: 95px;
   color: rgba(0, 173, 181, 0.2);
+  -webkit-animation: text-blur-out 5s cubic-bezier(0.55, 0.085, 0.68, 0.53) 0.3s infinite both;
+          animation: text-blur-out 5s cubic-bezier(0.55, 0.085, 0.68, 0.53) 0.3s infinite both;
+}
+@keyframes text-blur-out {
+  0% {
+    -webkit-filter: blur(0.01);
+            filter: blur(0.01);
+  }
+  100% {
+    -webkit-filter: blur(12px) opacity(0%);
+            filter: blur(12px) opacity(0%);
+  }
 }
 @media (max-width: 576px) {
   .about__info::after {
@@ -1090,6 +1129,13 @@ p {
 }
 @media (max-width: 1200px) {
   .works__list {
+    grid-template-columns: 1fr 1fr;
+    width: 100%;
+    max-width: 100%;
+  }
+}
+@media (max-width: 576px) {
+  .works__list {
     grid-template-columns: 1fr;
     width: 100%;
     max-width: 100%;
@@ -1128,7 +1174,6 @@ p {
 }
 @media (max-width: 1200px) {
   .works__item img {
-    height: 100%;
     width: 100%;
     border-radius: 10px;
   }
@@ -1154,7 +1199,7 @@ p {
       -ms-flex-direction: column;
           flex-direction: column;
 }
-@media (max-width: 576px) {
+@media (max-width: 992px) {
   .overlay {
     overflow-y: scroll;
   }
