--- a/scss/blocks/_works.scss
+++ b/scss/blocks/_works.scss
@@ -50,6 +50,7 @@
     position: relative;
     width: 100%;
     height: 100%;
+    pointer-events: none;
     &:hover .overlay {
       opacity: 1;
     }
@@ -64,6 +65,7 @@
     background: $dark;
     transition: $transition;
     cursor: pointer;
+
     @include desktop-small {
       max-width: 100%;
       padding: 10px;
