--- a/style.css
+++ b/style.css
@@ -398,14 +398,6 @@ p {
   padding: 0;
 }
 
-.vl {
-  border-right: 1px solid rgba(238, 238, 238, 0.1);
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 525px;
-}
-
 .btn {
   padding: 10px 32px;
   display: inline-block;
@@ -1167,6 +1159,7 @@ p {
   position: relative;
   width: 100%;
   height: 100%;
+  pointer-events: none;
 }
 .works__item-wrapper:hover .overlay {
   opacity: 1;
